# fl-studio-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  install.sh  pyproject.toml
.claude/skills/: fl-studio-api.md  genre-champeta.md  genre-dancehall.md  genre-dembow.md  genre-reggaeton.md  genre-trap-latino.md  music-theory.md  urban-producer.md
fl_controller/: device_FLStudioMCP.py
scripts/: ComposeWithLLM.pyscript  install_mcp_for_claude.sh  setup.sh
src/fl_studio_mcp/: __init__.py  server.py
src/fl_studio_mcp/tools/: __init__.py  channels.py  generators.py  midi_io.py  mixer.py  piano_roll.py  plugins.py  theory.py  transforms.py  transport.py
src/fl_studio_mcp/utils/: __init__.py  connection.py  fl_trigger.py  midi_connection.py
