[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fl-studio-mcp"
version = "0.1.0"
description = "MCP server for controlling FL Studio - mixer, transport, channels, plugins, and piano roll"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Camilo Sanz", email = "vosssanz@gmail.com" }
]
keywords = ["mcp", "fl-studio", "midi", "daw", "music-production", "piano-roll"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "fastmcp>=2.0",
    "mido>=1.3.0",
    "python-rtmidi>=1.5.0",
    "pynput>=1.7",
    "music21>=9.1",
]

[project.optional-dependencies]
dev = [
    "fl-studio-api-stubs>=37.0",
    "pytest>=8.0",
    "ruff>=0.8",
]

[project.scripts]
fl-studio-mcp = "fl_studio_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fl_studio_mcp"]

[dependency-groups]
dev = [
    "fl-studio-api-stubs>=37.0",
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
